Read clauses by status